<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F4F4"
    android:orientation="vertical"
    tools:context=".fragment.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/img_lock"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/profile_name"
            android:src="@drawable/ic_lock" />

        <TextView
            android:id="@+id/profile_name"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_centerInParent="true"
            android:paddingStart="5dp"
            android:paddingEnd="10dp"
            android:text="@string/jacob_w"
            android:textColor="#262626"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/drop_menu"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/profile_name"
            android:src="@drawable/ic_drop" />

        <ImageView
            android:id="@+id/menu"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="15dp"
            android:src="@drawable/ic_menu" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:src="@drawable/profile_image_style" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:padding="4dp"
                android:src="@drawable/story" />
        </FrameLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TextView
                android:id="@+id/post_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="30dp"
                android:text="@string/_54"
                android:textColor="#262626"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/post_number"
                android:layout_alignParentStart="true"
                android:layout_marginStart="17dp"
                android:text="@string/posts"
                android:textColor="#262626"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/followers_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingEnd="32dp"
                android:text="@string/_834"
                android:textColor="#262626"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/followers_number"
                android:layout_centerHorizontal="true"
                android:paddingEnd="25dp"
                android:text="@string/followers"
                android:textColor="#262626"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/following_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="40dp"
                android:text="@string/_162"
                android:textColor="#262626"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/following_number"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:text="@string/following"
                android:textColor="#262626"
                android:textSize="22sp" />
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/jacob_west"
            android:textColor="#262626"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/digital_goodies_designer"
                android:textColor="#262626"
                android:textSize="20sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/pixsellz"
                android:textColor="#037CDC"
                android:textSize="20sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/everything_is_designed"
            android:textColor="#262626"
            android:textSize="20sp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/white"
        android:text="@string/edit_profile"
        android:textColor="#262626"
        android:textSize="18sp"
        app:cornerRadius="10dp"
        app:strokeColor="#2E3C3C43"
        app:strokeWidth="2dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/New"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:orientation="vertical"
            tools:ignore="UnusedAttribute">

            <LinearLayout
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/profile_image_style"
                android:gravity="center"
                app:cardCornerRadius="80dp">

                <View
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/ic_plus" />
            </LinearLayout>

            <TextView
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:text="@string/New"
                android:textAlignment="center"
                android:textColor="#262626"
                android:textSize="20sp" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_rv_3" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#C7C7CC" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="UnusedAttribute">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:src="@drawable/ic_grid" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="6dp"
                android:background="#262626" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:orientation="vertical"
            tools:ignore="UnusedAttribute">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginTop="7dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:src="@drawable/icon1" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="6dp"
                android:background="#262626"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:spanCount="3" />
</LinearLayout>