<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/relative"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:id="@+id/poster_image"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/post_image" />
        <ImageView
            android:layout_width="35dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_more"
            android:layout_marginEnd="10dp"
            android:layout_alignParentEnd="true"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="58dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/poster_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textColor="#262626"
                android:text="@string/joshua_l"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/poster_country"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="#262626"
                android:text="@string/tokyo_japan" />
        </LinearLayout>
    </RelativeLayout>
    <ImageView
        android:id="@+id/post_image"
        android:layout_width="match_parent"
        android:layout_height="410dp"
        android:src="@drawable/img"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical">
        <ImageView
            android:id="@+id/pos_like"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:src="@drawable/ic_like" />
        <ImageView
            android:id="@+id/post_comment"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/pos_like"
            android:src="@drawable/ic_comment" />
        <ImageView
            android:id="@+id/post_send"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginStart="15dp"
            android:layout_toEndOf="@id/post_comment"
            android:src="@drawable/ic_send" />
        <ImageView
            android:id="@+id/post_save"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginEnd="15dp"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_save" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@drawable/image4"
            android:layout_marginStart="15dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/liked_by"
            android:textSize="18sp"
            android:textColor="#262626"
            android:layout_marginStart="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/craig_love"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#262626"
            android:layout_marginStart="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/and"
            android:textSize="18sp"
            android:textColor="#262626"
            android:layout_marginStart="5dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_44_686_others"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="#262626"
            android:layout_marginStart="5dp"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical">
            <TextView
                android:id="@+id/poster_name1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/joshua_l"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textColor="#262626" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="2"
                android:textSize="18sp"
                android:textColor="#262626"
                android:text="@string/the_game_in_japan_was_amazing_and_i_want_to_share_some_photos"/>
        </LinearLayout>
    </ScrollView>

</LinearLayout>